ByteDecoder revisi